# sleepy-driver-detector

./: .gitignore  CHANGELOG.md  CNN_learning_Ahn.ipynb  DEPLOYMENT_GUIDE.md  DataPreprocessing.ipynb  EyeCloseDetection.py  EyeDetection.py  GPU사용법  InfraredMLPEyeCloseDetector.py  LICENSE  MLEyeCloseDetector.py  MLPEyeCloseDetector.py  ML_RF_full_dataset_fast.ipynb  OpencvEyeCloseDetector.py  PROJECT_STRUCTURE.md  PointEyeCloseDetector.py  Preprocessing.py  README.md  Sample.ipynb  TEAM_WORKFLOW.md  Untitled1.ipynb  cuML_SVM_EyeState_Classifier.ipynb.ipynb  drowsiness_time_based_algorithm.html  lenght_cal_Ahn.ipynb  length_cal_final_Ahn.ipynb  opencv_eye_detection_presentation.html  project_Ahn.ipynb  pyproject.toml  setup.py  test_run.py  test_sleep_detection.py
.github/workflows/: publish.yml
EyeCloseDetection/: __init__.py
SleepDetection/: SleepDetection.py
eyeCloseDetection/: EyeCloseDetection.py  __init__.py
eyeCloseDetection/InfraredMLPEyeCloseDetector/: AIHUB CNN.ipynb  InfraredMLPEyeCloseDetector.py  aa copy.ipynb  cc.ipynb  cnn모델만.ipynb
eyeCloseDetection/MLEyeCloseDetector/: MLEyeCloseDetector.py  ML_RF_10000sample.ipynb  ML_RF_1000sample.ipynb  ML_RF_full_dataset_fast.ipynb  ML_SVM.ipynb  ML_XGBoost_1000sample_final_markdown.ipynb  Test_MLEyeCloseDetector_simple.ipynb  xgboost_eye_model.pkl
eyeCloseDetection/MLPEyeCloseDetector/: CNN_learning_Ahn.ipynb  MLPEyeCloseDetector.py  early_stopping_model.ipynb  eye_cnn_model.pth  eye_cnn_model_not_early_stopping.pth
eyeCloseDetection/OpencvEyeCloseDetector/: OpencvEyeCloseDetector.py
eyeCloseDetection/pointEyeCloseDetector/: PointEyeCloseDetector.py  lenght_cal_Ahn.ipynb
eyeDetection/: EyeDetection.py  __init_py
sleepy_driver/models/: __init__.py  eye_cnn_model_early_stopping.pth  infrared_mlp_model.py  infrared_model.pth  registry.py
