[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sleepy-driver"
version = "1.2.5"
description = "운전자 피로도 분석 시스템 - 영상 기반 눈 감김 분석을 통한 실시간 피로도 판단 라이브러리"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [
    {name = "SleepyDriver Team", email = "junju404@naver.com"},
]
keywords = ["drowsiness", "fatigue", "driver", "safety", "computer-vision", "ai", "real-time", "monitoring", "adas", "autonomous-driving"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Multimedia :: Video",
    "Topic :: Scientific/Engineering :: Image Processing",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]

dependencies = [
    "opencv-python>=4.5.0",
    "mediapipe>=0.10.0",
    "numpy>=1.21.0",
]

[project.optional-dependencies]
ml = [
    "joblib>=1.0.0",
    "scikit-learn>=1.0.0",
]
dl = [
    "torch>=1.9.0",
    "torchvision>=0.10.0",
]
all = [
    "joblib>=1.0.0",
    "scikit-learn>=1.0.0",
    "torch>=1.9.0",
    "torchvision>=0.10.0",
]
dev = [
    "pytest>=6.0",
    "pytest-cov",
    "black",
    "flake8",
    "twine",
    "build",
    "joblib>=1.0.0",
    "scikit-learn>=1.0.0",
    "torch>=1.9.0",
    "torchvision>=0.10.0",
]

[project.urls]
Homepage = "https://github.com/kimhotac/sleepy-driver-detector"
Documentation = "https://github.com/kimhotac/sleepy-driver-detector#readme"
Repository = "https://github.com/kimhotac/sleepy-driver-detector.git"
"Bug Tracker" = "https://github.com/kimhotac/sleepy-driver-detector/issues"

[project.scripts]
sleepy-driver-demo = "sleepy_driver.cli:main"

[tool.setuptools.packages.find]
include = ["sleepy_driver*"]
exclude = ["tests*", "_legacy*"]

[tool.setuptools.package-data]
sleepy_driver = ["models/*.pkl", "models/*.pth"] 